--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "medium-electron-react",
-  "version": "0.1.0",
+  "name": "removeKit",
+  "version": "1.0.1",
   "private": true,
+  "main": "public/Main.js",
+  "homepage": "./",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,15 +15,30 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-electron-browser-view": "^3.0.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "shell": "^0.8.4",
+    "typescript": "^4.1.2"
+  },
+  "build": {
+    "appId": "removeKit",
+    "extends": null,
+    "files": [
+      "*.js",
+      "build",
+      "node_modules"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "react-start": "set BROWSER=none && yarn start",
+    "electron-start": "set ELECTRON_START_URL=http://localhost:3000 && electron .",
+    "electron-pack": "yarn build && electron-builder build -c.extraMetadata.main=build/Main.js",
+    "serve": "cross-env PUBLIC_URL=http://localhost:3000 npm start"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +57,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^14.0.0",
+    "electron-builder": "^22.11.7"
   }
 }
